mdapipkg/unpackaged/objects/VoiceTransaction__c.object
<CustomObject>
    <fields>
        <fullName>Application_Alias__c</fullName>
        <description>Name to display for the Application Id field</description>
        <label>Application Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Id__c</fullName>
        <label>Application Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audio__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Device supports the audio player interface</description>
        <label>Audio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Alias__c</fullName>
        <description>Name to display for Device Id field</description>
        <label>Device Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Id__c</fullName>
        <description>The Id of the device</description>
        <label>Device Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Device supports the display interface</description>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intent_Name__c</fullName>
        <description>Name of the intent for the transaction</description>
        <label>Intent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proxied_URL__c</fullName>
        <description>The actual URL being called by the proxy</description>
        <label>Proxied URL</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remote_Address__c</fullName>
        <description>The IP address of the device</description>
        <label>Remote Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_URL__c</fullName>
        <label>Request URL</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Slot_Values__c</fullName>
        <description>The key=value pairs for slots</description>
        <label>Slot Values</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Speaker_Alias__c</fullName>
        <description>Name to display for Speaker Id field</description>
        <label>Speaker Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Confidence__c</fullName>
        <description>The confidence level for the speaker Id</description>
        <label>Speaker Confidence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speaker_Id__c</fullName>
        <description>The remote speaker Id</description>
        <label>Speaker Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URI__c</fullName>
        <description>The URI that is being proxied</description>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Alias__c</fullName>
        <description>User name to display for User_Id field</description>
        <label>User Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>The remote user Id</description>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Device supports video</description>
        <label>Video</label>
        <type>Checkbox</type>
    </fields>
    <label>Voice Transaction</label>
    <nameField>
        <displayFormat>VTX-{000000}</displayFormat>
        <label>VoiceRequest Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voice Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>